--- a/index.html
+++ b/index.html
@@ -7,6 +7,55 @@
     </head>
     <body>
         <content>
+            <h1>Album Stuiter</h1>
+            <div id="album1">
+                <img alt="" href="">
+                <article>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </article>
+            </div>
+            <div id="album2">
+                <img alt="" href="">
+                <article>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </article>
+            </div>
+            <div id="album3">
+                <img alt="" href="">
+                <article>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </article>
+            </div>
+            <div id="album4">
+                <img alt="" href="">
+                <article>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </article>
+            </div>
         </content>
     </body>
 </html>
