namen van albums en H3

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <div id="album1">
                 <img alt="" href="">
                 <article>
+                    <h3>Trap Nation</h3>
                     <ul>
                         <li></li>
                         <li></li>
@@ -23,6 +24,7 @@
             <div id="album2">
                 <img alt="" href="">
                 <article>
+                    <h3>Martin Garrix</h3>
                     <ul>
                         <li></li>
                         <li></li>
@@ -35,6 +37,7 @@
             <div id="album3">
                 <img alt="" href="">
                 <article>
+                    <h3>Yellow Claw</h3>
                     <ul>
                         <li></li>
                         <li></li>
@@ -47,6 +50,7 @@
             <div id="album4">
                 <img alt="" href="">
                 <article>
+                    <h3>Major Lazer</h3>
                     <ul>
                         <li></li>
                         <li></li>
