--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <body>
         <content>
             <h1>Album Stuiter</h1>
-            <div id="album1">
-                <img alt="" href="">
+            <div id="album">
+                <img alt="trapnation" src="img/trapnation.jpg">
+                <div id="box">
+                <div id="titlebox">
                 <article>
                     <h3>Trap Nation</h3>
                     <ul>
@@ -20,11 +22,15 @@
                         <li></li>
                     </ul>
                 </article>
+                </div>
+                </div>
             </div>
-            <div id="album2">
-                <img alt="" href="">
+            <div id="album">
+                <img alt="martingarix" src="img/martingarix.jpg">
+                <div id="box">
+                <div id="titlebox">
                 <article>
-                    <h3>Martin Garrix</h3>
+                    <h3>Martin Garix</h3>
                     <ul>
                         <li></li>
                         <li></li>
@@ -33,9 +39,13 @@
                         <li></li>
                     </ul>
                 </article>
+                </div>
+                </div>
             </div>
-            <div id="album3">
-                <img alt="" href="">
+            <div id="album">
+                <img alt="yellowclaw" src="img/yellowclaw.jpg">
+                <div id="box">
+                <div id="titlebox">
                 <article>
                     <h3>Yellow Claw</h3>
                     <ul>
@@ -46,9 +56,13 @@
                         <li></li>
                     </ul>
                 </article>
+                </div>
+                </div>
             </div>
-            <div id="album4">
-                <img alt="" href="">
+            <div id="album">
+                <img alt="majorlazor" src="img/majorlazer.jpg">
+                <div id="box">
+                <div id="titlebox">
                 <article>
                     <h3>Major Lazer</h3>
                     <ul>
@@ -59,6 +73,8 @@
                         <li></li>
                     </ul>
                 </article>
+                </div>
+                </div>
             </div>
         </content>
     </body>
