fade effect plus veel css
het transition effect is toegevoegd en de overige css

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
             <div id="album">
                 <img alt="trapnation" src="img/trapnation.jpg">
                 <div id="box">
-                <div id="titlebox">
+                <div id="title text">
                 <article>
                     <h3>Trap Nation</h3>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
                     </ul>
                 </article>
                 </div>
@@ -28,15 +28,15 @@
             <div id="album">
                 <img alt="martingarix" src="img/martingarix.jpg">
                 <div id="box">
-                <div id="titlebox">
+                <div id="title text">
                 <article>
                     <h3>Martin Garix</h3>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
                     </ul>
                 </article>
                 </div>
@@ -45,15 +45,15 @@
             <div id="album">
                 <img alt="yellowclaw" src="img/yellowclaw.jpg">
                 <div id="box">
-                <div id="titlebox">
+                <div id="title text">
                 <article>
                     <h3>Yellow Claw</h3>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
                     </ul>
                 </article>
                 </div>
@@ -62,15 +62,15 @@
             <div id="album">
                 <img alt="majorlazor" src="img/majorlazer.jpg">
                 <div id="box">
-                <div id="titlebox">
+                <div id="title text">
                 <article>
                     <h3>Major Lazer</h3>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
+                        <li>San holo - We rise</li>
                     </ul>
                 </article>
                 </div>
