--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                     <h3>Trap Nation</h3>
                     <ul>
                         <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
+                        <li>San holo - The moon</li>
+                        <li>San holo - Tommorow</li>
+                        <li>San holo - Perfect world</li>
+                        <li>San holo - Delight</li>
                     </ul>
                 </article>
                 </div>
@@ -32,11 +32,11 @@
                 <article>
                     <h3>Martin Garix</h3>
                     <ul>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
+                        <li>Martin garrix - Forbidden </li>
+                        <li>Martin garrix - You</li>
+                        <li>Martin garrix - Gourmet</li>
+                        <li>Martin garrix - Fish</li>
+                        <li>Martin garrix - Chili chicken</li>
                     </ul>
                 </article>
                 </div>
@@ -49,11 +49,11 @@
                 <article>
                     <h3>Yellow Claw</h3>
                     <ul>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
+                        <li>Yellow Claw - Shotgun</li>
+                        <li>Yellow Claw - Pause</li>
+                        <li>Yellow Claw - Control</li>
+                        <li>Yellow Claw - Flexing</li>
+                        <li>Yellow Claw - Night</li>
                     </ul>
                 </article>
                 </div>
@@ -66,11 +66,11 @@
                 <article>
                     <h3>Major Lazer</h3>
                     <ul>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
-                        <li>San holo - We rise</li>
+                        <li>Major Lazer - Light up</li>
+                        <li>Major Lazer - Snakes</li>
+                        <li>Major Lazer - Break it</li>
+                        <li>Major Lazer - Drunk pass</li>
+                        <li>Major Lazer - Chemical</li>
                     </ul>
                 </article>
                 </div>
